# ccls

./: .appveyor.yml  .clang-format  .clang_complete  .gitattributes  .gitignore  .gitmodules  .travis.yml  .ycm_extra_conf.py  CMakeLists.txt  README.md  ccls_schema.dl  clang_args  command_line.cc  compilation_database_loader.cc  compilation_database_loader.h  compile_commands.json  doctest_impl.cc  function_output_iterator.hpp  indexer.cpp  indexer.h  ipc.cc  ipc.h  language_server_api.h  main.cpp  message_handler.hh  old.cc  platform.h  platform_linux.cc  platform_win.cc  query.cc  query.h  query_db.cc  serializer.cc  serializer.h  shared_memory_win.cpp  task.cc  test.cc  test_runner_e2e.py  tinydir.h  utils.cc  (+2 more)
.github/: ISSUE_TEMPLATE
.github/workflows/: build_linux.yaml  build_mac.yaml  clang-format-check.py  clang-format.yaml
ci/: before_deploy.sh
clang_archive_hashes/: LLVM-5.0.1-win64.exe.SHA256  LLVM-6.0.0-win64.exe.SHA256  LLVM-6.0.1-win64.exe.SHA256  LLVM-7.0.0-win64.exe.SHA256  clang+llvm-5.0.1-amd64-unknown-freebsd10.tar.xz.SHA256  clang+llvm-5.0.1-x86_64-apple-darwin.tar.xz.SHA256  clang+llvm-5.0.1-x86_64-linux-gnu-ubuntu-14.04.tar.xz.SHA256  clang+llvm-6.0.0-amd64-unknown-freebsd-10.tar.xz.SHA256  clang+llvm-6.0.0-x86_64-apple-darwin.tar.xz.SHA256  clang+llvm-6.0.0-x86_64-linux-gnu-ubuntu-14.04.tar.xz.SHA256  clang+llvm-6.0.0-x86_64-linux-gnu-ubuntu-16.04.tar.xz.SHA256  clang+llvm-6.0.1-amd64-unknown-freebsd10.tar.xz.SHA256  clang+llvm-6.0.1-x86_64-linux-gnu-ubuntu-16.04.tar.xz.SHA256  clang+llvm-7.0.0-amd64-unknown-freebsd11.tar.xz.SHA256  clang+llvm-7.0.0-x86_64-apple-darwin.tar.xz.SHA256  clang+llvm-7.0.0-x86_64-linux-gnu-ubuntu-14.04.tar.xz.SHA256  clang+llvm-7.0.0-x86_64-linux-gnu-ubuntu-16.04.tar.xz.SHA256
cmake/: DefaultCMakeBuildType.cmake  DownloadAndExtract7zip.cmake  DownloadAndExtractClang.cmake  DownloadAndExtractLLVM.cmake  FindClang.cmake
foo/: _empty_test.cc  a.cc  a.h  b.cc  clang_args
full_tests/index_delta/: a_v0.cc  a_v1.cc
full_tests/simple_cross_reference/: a.cc  a.h  b.cc  c.cc  compile_commands.json  compile_commands2.json  test.cc
index_tests/: _empty_test.cc  class_forward_declaration.cc  foobar.cc  function_declaration.cc  function_declaration_definition.cc  function_definition.cc  method_declaration.cc  method_definition.cc  method_inline_declaration.cc
index_tests/constructors/: constructor.cc  destructor.cc  implicit_constructor.cc  invalid_reference.cc  make_functions.cc  make_functions.h
index_tests/declaration_vs_definition/: class.cc  class_member.cc  class_member_static.cc  func.cc  func_associated_function_params.cc  method.cc
index_tests/enums/: enum_class_decl.cc  enum_decl.cc  enum_inherit.cc  enum_usage.cc
index_tests/inheritance/: class_inherit.cc  class_inherit_templated_parent.cc  class_multiple_inherit.cc  function_override.cc  interface_pure_virtual.cc  multiple_base_functions.cc
index_tests/lambdas/: lambda.cc
index_tests/macros/: complex.cc  foo.cc
index_tests/multi_file/: funky_enum.cc  funky_enum.h  impl.cc  simple_header.h  simple_impl.cc  static.cc  static.h
index_tests/namespaces/: anonymous_function.cc  function_declaration.cc  function_definition.cc  method_declaration.cc  method_definition.cc  method_inline_declaration.cc  namespace_alias.cc  namespace_reference.cc
index_tests/objective-c/: class.m
index_tests/operators/: operator.cc
index_tests/outline/: outline.cc  outline2.cc  static_function_in_type.cc  static_function_in_type.h
index_tests/preprocessor/: include_guard.cc  skipped.cc
index_tests/templates/: concept.cc  func_specialized_template_param.cc  implicit_variable_instantiation.cc  member_ref_in_template.cc  namespace_template_class_template_func_usage_folded_into_one.cc  namespace_template_type_usage_folded_into_one.cc  specialization.cc  specialized_func_definition.cc  template_class_func_usage_folded_into_one.cc  template_class_template_func_usage_folded_into_one.cc  template_class_type_usage_folded_into_one.cc  template_class_var_usage_folded_into_one.cc  template_func_usage_folded_into_one.cc  template_type_usage_folded_into_one.cc  template_var_usage_folded_into_one.cc
index_tests/types/: anonymous_struct.cc  typedefs.cc
index_tests/unions/: union_decl.cc  union_usage.cc
index_tests/usage/: func_called_from_constructor.cc  func_called_from_macro_argument.cc  func_called_from_template.cc  func_called_implicit_ctor.cc  func_usage_addr_func.cc  func_usage_addr_method.cc  func_usage_call_func.cc  func_usage_call_method.cc  (+31 more)
libclangmm/: CMakeLists.txt  CodeCompleteResults.cc  CompilationDatabase.cc  CompilationDatabase.h  CompileCommand.cc  CompileCommand.h  CompileCommands.cc  CompileCommands.h  CompletionString.cc  Cursor.cc  Cursor.h  Diagnostic.cc  Diagnostic.h  SourceLocation.cc  SourceLocation.h  SourceRange.cc  SourceRange.h  Token.cc  Token.h  Tokens.cc  Tokens.h  TranslationUnit.cc  TranslationUnit.h  Utility.cc  Utility.h  clangmm.h
src/: atomic_object.h  buffer.cc  buffer.h  cache.cc  cache.h  cache_loader.cc  cache_loader.h  cache_manager.cc  cache_manager.h  clang_args  clang_complete.cc  clang_complete.h  clang_complete.hh  clang_cursor.cc  clang_cursor.h  clang_format.cc  clang_format.h  clang_index.cc  clang_index.h  clang_indexer.cc  clang_symbol_kind.h  clang_translation_unit.cc  clang_translation_unit.h  clang_tu.cc  clang_tu.h  clang_tu.hh  clang_utils.cc  clang_utils.h  clange_complete.cc  code_complete_cache.cc  code_complete_cache.h  code_completion.cc  code_completion.h  command_line.cc  compilation_database_loader.cc  compilation_database_loader.h  compile.cc  config.cc  config.h  config.hh  (+142 more)
tests/: _empty_test.cc  class.m  class_forward_declaration.cc  foobar.cc  function_declaration.cc  function_declaration_definition.cc  function_declaration_in_namespace.cc  function_definition.cc  function_definition_in_namespace.cc  method_declaration.cc  method_declaration_in_namespace.cc  method_definition.cc  method_definition_in_namespace.cc  method_inline_declaration.cc  method_inline_declaration_in_namespace.cc  stl.cc
(+252 files in other folders)
